add new bookstore thumbnail

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta property="og:image" content="  https://ibb.co/Z8Vkfhp">
+    <meta name="description" content="Bookstore project built with ReactJS and Redux, using API data and rendering books, adding books, or removing the books.">
+
+    
+  <!-- https://ibb.co/Z8Vkfhp -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
