add meta tags for social media

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta property="og:image" content="public/Screenshot from 2022-05-30 22-08-03.png">
+    <meta name="description" content="Bookstore project built with ReactJS and Redux, using API data and rendering books, adding books, or removing the books.">
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="image" property="og:image" content="https://i.ibb.co/9TNCpqk/Screenshot-from-2022-05-30-22-08-03.png">
-    <meta name="description" content="Bookstore project built with ReactJS and Redux, using API data and rendering books, adding books, or removing the books.">
 
   <!-- https://ibb.co/Z8Vkfhp -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
