--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta property="og:image" content="https://raw.githubusercontent.com/collinsmezie/React-BookStore-App/development/public/Screenshot%20from%202022-05-30%2022-08-03.png>
+    <meta property="og:image" content="https://raw.githubusercontent.com/collinsmezie/React-BookStore-App/development/public/Screenshot%20from%202022-05-30%2022-08-03.png">
     <meta name="description" content="Bookstore project built with ReactJS and Redux, using API data and rendering Books, adding books, or removing the Books.">
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
